[package]
name = "paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
system = { path = "../../system" }
system_derive = { path = "../../system/system_derive" }
rayon = "1.5"